Always show scrollbar on body to prevent horizontal shift on content overflow

--- a/source/global.css
+++ b/source/global.css
@@ -11,6 +11,10 @@ body {
   color: var(--color-text);
 }
 
+body {
+  overflow-y: scroll;
+}
+
 *,
 *::before,
 *::after {
